# ocaml-with-variants

./: README.md
OCaml-with-variants/: .gitignore  DONT_REMOVE_THIS_DIRECTORY.md  OCaml-with-variants.opam  README.md  REPL.ml  dune  dune-project
OCaml-with-variants/QCtest/: QCTests.ml  dune  runULC.ml
OCaml-with-variants/demos/: declAppl.ml  declAppl.t  demoAO.ml  demoNO.ml  demoParse.ml  dune  interpretTests.t  parsingTests.t  sfTests.t  simpleFuncs.ml
OCaml-with-variants/lib/: ast.mli  dune  infer.ml  inter.ml  parser.ml  parser.mli  repl.ml  repl.mli  utils.ml  utils.mli
